# iks-rag-thesis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BACKUP.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  HF_UPLOAD_REPORT.md  INSTALL.md  PHASE4_SUMMARY.md  PHASE5_LAPTOP_SMOKE.md  PHASE5_LAPTOP_SUMMARY.md  PHASE6_PROMPT1_LAPTOP_SUMMARY.md  README.md  WEEK2_AUDIT.md  WEEK2_SUMMARY.md  environment.yml  literature_tracker.csv  progress.md  pyproject.toml  references.bib  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/data/: irsid_norm.yaml  olid_i_norm.yaml  paddy_doctor_norm.yaml  phantomfs_norm.yaml  plantdoc_norm.yaml  plantvillage_norm.yaml  sirajganj_moisture_norm.yaml  soil_moisture_classes.yaml  soil_norm.yaml  soil_soil_type_classes.yaml  soil_texture_classes.yaml  soil_texture_label_mapping.yaml
configs/disease/: default.yaml
configs/eval/: default.yaml
configs/integration/: default.yaml
configs/rag/: default.yaml
configs/soil/: default.yaml
data/soil/: tiled_texture_audit.json
decisions/: 0001-efficientnet-backbones.md  0002-pydantic-over-hydra.md  0003-no-langchain-in-rag.md  README.md
demo/: README.md
models/: README.md
notebooks/: 00_environment_check.ipynb  README.md  dataset_eda.ipynb  phase5_disease_training.ipynb  phase6_soil_training.ipynb  phase6_soil_training_v2.ipynb  phase6_soil_training_v3.ipynb  phase6_soil_training_v3_tiling.ipynb
notes/: README.md
notes/cv/: README.md  augmentation.md  class_imbalance.md  efficientnet.md  evaluation_metrics.md  gradcam.md  multi_task_heads.md  transfer_learning.md
notes/iks/: README.md  copyright_status.md  krishi_parashara_notes.md  sanskrit_translation_caveats.md  upavanavinoda_notes.md  vrikshayurveda_notes.md
notes/rag/: README.md  bm25.md  chunking_strategies.md  cross_encoder_rerank.md  dense_retrieval.md  hybrid_retrieval.md  llama_quantization.md  prompt_engineering.md  ragas_metrics.md
notes/xai/: README.md  captum_overview.md  chunk_attribution.md  faithfulness_vs_plausibility.md  gradcam_methods.md
paper/: README.md
research_journal/: README.md
research_journal/daily/: 2026-05-20.md
research_journal/monthly/: 2026-05.md  README.md
research_journal/weekly/: 2026-W21.md  README.md
results/: dataset_stats.md
scripts/: README.md  __init__.py  _dataset_specs.py  _download_utils.py  build_eda_notebook.py  build_olid_artifacts.py  build_phase5_notebook.py  build_phase6_notebook.py  build_phase6_v2_notebook.py  build_phase6_v3_notebook.py  build_phase6_v3_tiling_notebook.py  build_soil_cross_region.py  build_splits.py  build_tiled_texture_dataset.py  compute_channel_stats.py  compute_soil_norm_stats.py  dataset_stats.py  download_all.py  download_irsid.py  download_models_from_hf.py  download_olid_i.py  download_paddy_doctor.py  download_phantomfs_soil.py  download_plantdoc.py  download_plantvillage.py  download_sirajganj_moisture.py  integrate_latha_soil.py  phase5_smoke_test.py  prepare_soil_hf_datasets.py  upload_paddy_doctor_to_hf.py  upload_plantdoc_to_hf.py  upload_plantvillage_to_hf.py  upload_texture_only.py  validate_datasets.py
src/: __init__.py
src/disease/: __init__.py  config.py  dataset.py  gradcam.py  infer.py  model.py  train.py  transforms.py
src/eval/: __init__.py  citation_verification.py  config.py  cv_metrics.py  expert_annotation.py  ragas_eval.py
src/explain/: __init__.py  chunk_highlight.py  gradcam.py
src/integration/: __init__.py  causation.py  causation_dataset.py  causation_transforms.py  config.py  context.py  strategy_llm_mediated.py  strategy_multimodal_embedding.py  strategy_template.py
src/rag/: __init__.py  chunker.py  config.py  corpus_loader.py  embedder.py  generator.py  hybrid.py  prompts.py  reranker.py  retriever.py
src/soil/: __init__.py  config.py  dataset.py  infer.py  mixup.py  model.py  (+7 more)
tests/: conftest.py
thesis/: README.md
(+92 files in other folders)
