[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iks-agri-advisory"
version = "0.1.0"
description = "IKS-Grounded Multimodal Agricultural Advisory System (M.Tech thesis, IIITDM Jabalpur)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Academic use only" }
authors = [{ name = "Ankit Pawar", email = "raj@mbgcard.com" }]
keywords = ["agriculture", "rag", "multimodal", "iks", "computer-vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Deep learning + CV
    "torch>=2.2,<2.5",
    "torchvision>=0.17,<0.20",
    "timm>=1.0,<2.0",
    "albumentations>=1.4,<2.0",
    "opencv-python>=4.9,<5.0",
    "Pillow>=10.2,<12.0",

    # Numerics / data
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "scipy>=1.12,<2.0",

    # NLP + LLM
    "transformers>=4.41,<5.0",
    "sentence-transformers>=2.7,<4.0",
    "accelerate>=0.30,<2.0",

    # Retrieval
    "chromadb>=0.5,<2.0",
    "rank-bm25>=0.2.2,<1.0",

    # RAG evaluation
    "ragas>=0.1.10,<1.0",

    # CV metrics
    "torchmetrics>=1.3,<2.0",

    # Explainability
    "grad-cam>=1.5,<2.0",
    "captum>=0.7,<1.0",

    # Configuration
    "pydantic>=2.6,<3.0",
    "PyYAML>=6.0,<7.0",

    # Visualization
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",

    # Utilities
    "tqdm>=4.66,<5.0",
    "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "black>=24.4,<26.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<7.0",
    "pre-commit>=3.7,<5.0",
    "types-PyYAML>=6.0,<7.0",
    "types-python-dateutil>=2.9,<3.0",
]
gpu = [
    "bitsandbytes>=0.43,<1.0; sys_platform == 'linux'",
    "faiss-cpu>=1.8,<2.0",
]
notebooks = [
    "jupyter>=1.0,<2.0",
    "ipykernel>=6.29,<7.0",
    "tensorboard>=2.16,<3.0",
]
demo = [
    "streamlit>=1.34,<2.0",
    "gradio>=4.30,<6.0",
]

[project.urls]
Repository = "https://github.com/ankit8453/iks-rag-thesis"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "notebooks*", "scripts*", "demo*", "paper*", "thesis*", "notes*"]

# ---------------------------------------------------------------------------
# Tooling configuration (kept in pyproject so contributors only edit one file)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "thesis", "paper"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PL"]
ignore = [
    "PLR0913",  # too many arguments — common in training configs
    "PLR2004",  # magic value used in comparison — common in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "PLR2004", "N802", "N803", "N806"]
"src/*/config.py" = ["N805"]  # Pydantic validator first-arg conventions

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "/(notebooks|thesis|paper)/"

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (skipped in pre-commit)",
    "gpu: requires CUDA-enabled GPU",
    "integration: end-to-end integration tests",
]
